<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tonini.diego.dexpense.fragments.MainFragment">

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/chart1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/primary"
        android:layout_below="@+id/chart1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:padding="16dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout2">


        <RadioGroup
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup">

            <RadioButton
                android:id="@+id/rbLastWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:checked="true"
                android:text="@string/Last_week"/>

            <RadioButton
                android:id="@+id/rbLastMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/Last_month"/>

            <RadioButton
                android:id="@+id/rbLastYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/Last_year"/>

            <RadioButton
                android:id="@+id/rbCustom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/Choose_interval"/>

        </RadioGroup>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">


                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/switchEntryExit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textOn="ON"
                        android:textOff="OFF" />

                    <TextView
                        android:id="@+id/tvEntryExit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:text="@string/Exit"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutFrom"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/imgOpenFrom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:maxWidth="32dp"
                        android:maxHeight="32dp"
                        android:src="@drawable/tear_of_calendar_128"
                        android:layout_gravity="left|center_vertical"/>

                    <TextView
                        android:id="@+id/tvOpenFrom"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="16dp"
                        android:text="@string/From"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutTo"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/imgOpenTo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:maxWidth="32dp"
                        android:maxHeight="32dp"
                        android:src="@drawable/tear_of_calendar_128"
                        android:layout_gravity="left|center_vertical"/>

                    <TextView
                        android:id="@+id/tvOpenTo"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="16dp"
                        android:text="@string/To"/>


                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>









</RelativeLayout>
