<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="22dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/primary"
            android:textSize="16sp"
            android:padding="16dp"
            android:gravity="start|center_vertical"
            android:textStyle="bold"
            android:text="@string/Name"/>

        <EditText
            android:id="@+id/editAlertAddWalletName"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="my wallet..."
            android:textColor="?attr/colorPrimary"
            android:background="#00000000"
            android:textColorHint="@color/primary"
            android:padding="16dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="start|center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="16dp"
            android:textColor="@color/primary"
            android:text="@string/Initial_Balance"/>

        <EditText
            android:id="@+id/editAlertWalletBalance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:textColor="@color/primary"
            android:padding="16dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:hint="0"
            android:textColorHint="@color/primary"
            android:background="#00000000"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textColor="@color/primary"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/Monthly_limit"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/seekBarWalletLimitMonth"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:max="3000"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/tvWalletLimitMonth"
            android:layout_toStartOf="@+id/tvWalletLimitMonth" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:gravity="end|center_vertical"
            android:id="@+id/tvWalletLimitMonth"
            android:padding="5dp"
            android:textColor="@color/primary"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>




</LinearLayout>